--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Plant Immunity Lab</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Lab Name</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <h1>Welcome to the DING Lab</h1>
-  <p>PI PIngtao Ding</p>
+  <header>
+    <h1>DING LAB</h1>
+    <p>Plant diseases occur everywhere on our planet. Understanding how disease resistance works is our long-term mission and the key to protecting plant health.</p>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Research</a></li>
+        <li><a href="#">Publications</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <h2>Welcome to DING LAB, a plant immunity lab</h2>
+      <p>
+        Our research encompasses critical areas pertaining to plant diseases and their impact on global agriculture.
+      </p>
+    </section>
+
+    <section>
+      <h2>Research Areas</h2>
+      <ul>
+        <li><strong>Area 1:</strong> Defence gene activation for elevated plant disease resistance.</li>
+        <li><strong>Area 2:</strong> Gene-regulatory networks discoveries in plant innate immunity.</li>
+        <li><strong>Area 3:</strong> Decoding plant immunity at single-cell and systems biology levels.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:your.email@example.com">ding.lab.2021@gmail.com</a></p>
+      <p>Address: Sylviusweg 72, 2333 BE Leiden, The Netherlands</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 DING LAB. All rights reserved.</p>
+  </footer>
 </body>
 </html>
